idmas/deploy/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: idmas
  labels:
    app.kubernetes.io/part-of: idmas
